--- a/app/src/main/res/layout/calculator_layout.xml
+++ b/app/src/main/res/layout/calculator_layout.xml
@@ -6,9 +6,58 @@
     android:backgroud="@android:color/darker_gray"
     >
     <TextView
-        android:layout_width="math_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Operand 1, (And Result)"
         />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText1" android:text="0"
+        android:inputType="numberDecimal"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Operand 2"
+        android:layout_marginTop="10dp"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/editText2"
+        android:inputType="numberDecimal"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Operand1 = Operand1 Operator Operand2"
+        android:layout_marginTop="10dp"
+        />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button android:text="+" android:id="@+id/plushButton"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </Button>
+        <Button android:text="-" android:id="@+id/minusButton"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button android:text="*" android:id="@+id/multiplyButton"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button android:text="/" android:id="@+id/divideButton"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
