--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,38 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:style/Theme.Light">
-        <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBarStyle</item>
+    </style>
+    <style name="custo">
+        <item name="android:textColor">#1ec284</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">#368dff</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+    <style name="Theme.Transparent" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+    <style name="my_actionbar_style" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <!-- 设置actionbar 背景色 透明 -->
+        <item name="android:background">#33000000</item>
+        <item name="android:backgroundStacked">#346c36</item>
+        <item name="android:backgroundSplit">#33000000</item>
+    </style>
+    <style name="AppTheme.ActionBarStyle" parent="android:Widget.ActionBar">
+        <!-- 半透明背景，需要开启actionbar悬浮 -->
+        <!--<item name="android:background">@drawable/titlebar_bg</item>-->
+        <item name="android:height">155dp</item>
     </style>
 
+    <style name="AlertDialogCustom" parent="@android:style/Theme.Holo.DialogWhenLarge">
+        <item name="android:textColor">#ffdefc</item>
+        <item name="android:background">#e5ffea</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:alpha">0.8</item>
+    </style>
 </resources>
